--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(
 
 # Bayesian spatio-temporal statistics {#bayes-st}
 \adjustmtc
-\markboth{Bayesian}{}
+\markboth{Bayesian spatio-temporal statistics}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 ## Bayesian statistics
@@ -88,12 +88,16 @@ As computation improves, the space of models available to the analyst expands.
 
 ## Spatio-temporal statistics
 
-In spatio-temporal statistics [@cressie2015statistics] we observe data indexed by spatial or temporal location.
+In spatio-temporal statistics [@cressie2015statistics], we observe data indexed by spatial or temporal location.
 In this thesis we assume that the spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$ has two dimensions, corresponding to latitude and longitude.
 Data may be associated to a point $s \in \mathcal{S}$ or area $A \subseteq \mathcal{S}$ in the study region.
 The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally be assumed to be one dimensional.
+Similarly, data may be associated to a point $t \in \mathcal{T}$ or period of time $T \in \mathcal{T}$.
 
-Correlation structure is an important feature of spatio-temporal data.
+Spatio-temporal data has some important properties.
+Foremost among them is correlation structure.
+Tobler's first law of geography, earlier expressed by @fisher1936design, is that "everything is related to everything else, but near things are more related than distant things" [@tobler1970computer].
+This law extends not only to space but also time.
 
 ## Model classes {#hierarchical-lgm-elgm}
 
@@ -175,7 +179,7 @@ In Chapter \@ref(naomi-aghq), the Naomi small-area estimation model used to prod
 ## Survey methods
 
 Survey methods concern the design and analysis of survey data [@lohr2009sampling].
-In SSA, nationally representative household surveys, such as the Demographic and Health Surveys (DHS) or Population-based HIV Impact Assessment (PHIA) surveys, provide the highest quality information about HIV.
+In SSA, nationally representative household surveys, such as the Demographic and Health Surveys (DHS) [@dhs] or Population-based HIV Impact Assessment (PHIA) [@phia] surveys, provide the highest quality information about HIV.
 Talk about the DDC [@meng2018statistical].
 With regard to the DDC, discuss how survey weighting is helpful.
 Discuss how we weight then model following @chen2014use.
