--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -12,7 +12,7 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Spatial structure {#beyond-borders}
+# Models for spatial structure {#beyond-borders}
 \adjustmtc
 \markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
@@ -54,7 +54,7 @@ The Markov property arises due to the conditional independence structure $p(u_i 
 This is reflected in the sparsity of $\bR$ such that $u_i \perp u_j \, | \, \bu_{-ij}$ if and only if $R_{ij} = 0$.
 The structure matrix $\bR$ may also be expressed as the Laplacian of the adjacency graph $\mathcal{G} = (\mathcal{V}, \mathcal{E})$ with vertices $v \in \mathcal{V}$ corresponding to each area and edges $e \in \mathcal{E}$ between vertices $i$ and $j$ when $i \sim j$.
 
-Rewriting Equation \ref{eq:gmrf}, the probability density function of $\bu$ is
+Rewriting Equation \@ref{eq:gmrf}, the probability density function of $\bu$ is
 \begin{equation}
     p(\bu)
     \propto \exp \left( -\frac{\tau_u}{2} \bu^\top \bR \bu \right)
