--- a/front-and-back-matter/98-appendices.Rmd
+++ b/front-and-back-matter/98-appendices.Rmd
@@ -8,4 +8,162 @@
 
 # A model for risk group proportions supplement
 
+## Household survey data
+
+\begin{longtable}{rlrcrrrr}
+\toprule
+\multicolumn{1}{l}{} &  &  &  & \multicolumn{4}{c}{Sample size} \\ 
+\cmidrule(lr){5-8}
+\multicolumn{1}{l}{} & Type & Year & Transactional sex question & 15-19 & 20-24 & 25-29 & Total \\ 
+\midrule
+\multicolumn{1}{l}{Botswana} \\ 
+\midrule
+ & BAIS & 2013 & \cmark & 557 & 588 & 649 & 1794 \\ 
+Total &  &  &  & $557$ & $588$ & $649$ & $1794$ \\ 
+\midrule
+\multicolumn{1}{l}{Cameroon} \\ 
+\midrule
+ & DHS & 2004 & \xmark & 2675 & 2207 & 1732 & 6614 \\ 
+ & DHS & 2011 & \xmark & 3588 & 3115 & 2655 & 9358 \\ 
+ & PHIA & 2017 & \xmark & 2620 & 2339 & 2259 & 7218 \\ 
+ & DHS & 2018 & \cmark & 3349 & 2463 & 2345 & 8157 \\ 
+Total &  &  &  & $12232$ & $10124$ & $8991$ & $31347$ \\ 
+\midrule
+\multicolumn{1}{l}{Kenya} \\ 
+\midrule
+ & DHS & 2003 & \xmark & 1819 & 1709 & 1391 & 4919 \\ 
+ & DHS & 2008 & \xmark & 1767 & 1743 & 1419 & 4929 \\ 
+ & DHS & 2014 & \xmark & 2861 & 2534 & 2858 & 8253 \\ 
+Total &  &  &  & $6447$ & $5986$ & $5668$ & $18101$ \\ 
+\midrule
+\multicolumn{1}{l}{Lesotho} \\ 
+\midrule
+ & DHS & 2004 & \xmark & 1761 & 1455 & 1026 & 4242 \\ 
+ & DHS & 2009 & \xmark & 1833 & 1543 & 1194 & 4570 \\ 
+ & DHS & 2014 & \xmark & 1537 & 1292 & 1067 & 3896 \\ 
+ & PHIA & 2017 & \cmark & 1156 & 1202 & 1054 & 3412 \\ 
+Total &  &  &  & $6287$ & $5492$ & $4341$ & $16120$ \\ 
+\midrule
+\multicolumn{1}{l}{Mozambique} \\ 
+\midrule
+ & AIS & 2009 & \xmark & 1031 & 1106 & 987 & 3124 \\ 
+ & DHS & 2011 & \xmark & 2932 & 2299 & 2206 & 7437 \\ 
+ & AIS & 2015 & \xmark & 1552 & 1389 & 1080 & 4021 \\ 
+Total &  &  &  & $5515$ & $4794$ & $4273$ & $14582$ \\ 
+\midrule
+\multicolumn{1}{l}{Malawi} \\ 
+\midrule
+ & DHS & 2000 & \xmark & 2914 & 2998 & 2358 & 8270 \\ 
+ & DHS & 2004 & \xmark & 2407 & 2823 & 2135 & 7365 \\ 
+ & DHS & 2010 & \xmark & 5031 & 4387 & 4309 & 13727 \\ 
+ & DHS & 2015 & \cmark & 5273 & 5094 & 3976 & 14343 \\ 
+ & PHIA & 2016 & \cmark & 1646 & 1934 & 1511 & 5091 \\ 
+Total &  &  &  & $17271$ & $17236$ & $14289$ & $48796$ \\ 
+\midrule
+\multicolumn{1}{l}{Namibia} \\ 
+\midrule
+ & DHS & 2000 & \xmark & 1427 & 1313 & 1098 & 3838 \\ 
+ & DHS & 2006 & \xmark & 2203 & 1869 & 1544 & 5616 \\ 
+ & DHS & 2013 & \xmark & 1852 & 1709 & 1481 & 5042 \\ 
+ & PHIA & 2017 & \cmark & 1491 & 1525 & 1370 & 4386 \\ 
+Total &  &  &  & $6973$ & $6416$ & $5493$ & $18882$ \\ 
+\midrule
+\multicolumn{1}{l}{Eswatini} \\ 
+\midrule
+ & DHS & 2006 & \xmark & 1265 & 1027 & 731 & 3023 \\ 
+ & PHIA & 2017 & \xmark & 1031 & 895 & 811 & 2737 \\ 
+Total &  &  &  & $2296$ & $1922$ & $1542$ & $5760$ \\ 
+\midrule
+\multicolumn{1}{l}{Tanzania} \\ 
+\midrule
+ & AIS & 2003 & \xmark & 1466 & 1377 & 1270 & 4113 \\ 
+ & AIS & 2007 & \xmark & 2137 & 1676 & 1509 & 5322 \\ 
+ & DHS & 2010 & \xmark & 2221 & 1860 & 1613 & 5694 \\ 
+ & AIS & 2012 & \xmark & 2474 & 1923 & 1815 & 6212 \\ 
+ & PHIA & 2016 & \cmark & 2999 & 2845 & 2521 & 8365 \\ 
+Total &  &  &  & $11297$ & $9681$ & $8728$ & $29706$ \\ 
+\midrule
+\multicolumn{1}{l}{Uganda} \\ 
+\midrule
+ & DHS & 2000 & \xmark & 1687 & 1541 & 1326 & 4554 \\ 
+ & DHS & 2006 & \xmark & 1948 & 1660 & 1404 & 5012 \\ 
+ & AIS & 2011 & \xmark & 2451 & 2164 & 1921 & 6536 \\ 
+ & DHS & 2011 & \xmark & 2025 & 1664 & 1614 & 5303 \\ 
+ & DHS & 2016 & \cmark & 4276 & 3782 & 3014 & 11072 \\ 
+ & PHIA & 2016 & \xmark & 3289 & 3059 & 2574 & 8922 \\ 
+\midrule 
+Total &  &  &  & $15676$ & $13870$ & $11853$ & $41399$ \\ 
+\midrule
+\multicolumn{1}{l}{South Africa} \\ 
+\midrule
+ & DHS & 2016 & \cmark & 1505 & 1408 & 1397 & 4310 \\ 
+Total &  &  &  & $1505$ & $1408$ & $1397$ & $4310$ \\ 
+\midrule
+\multicolumn{1}{l}{Zambia} \\ 
+\midrule
+ & DHS & 2007 & \xmark & 1598 & 1405 & 1373 & 4376 \\ 
+ & DHS & 2013 & \xmark & 3685 & 3036 & 2789 & 9510 \\ 
+ & PHIA & 2016 & \cmark & 2120 & 2045 & 1619 & 5784 \\ 
+ & DHS & 2018 & \cmark & 3112 & 2687 & 2166 & 7965 \\ 
+Total &  &  &  & $10515$ & $9173$ & $7947$ & $27635$ \\ 
+\midrule
+\multicolumn{1}{l}{Zimbabwe} \\ 
+\midrule
+ & DHS & 1999 & \xmark & 1467 & 1230 & 1011 & 3708 \\ 
+ & DHS & 2005 & \xmark & 2128 & 1943 & 1438 & 5509 \\ 
+ & DHS & 2010 & \xmark & 1963 & 1796 & 1679 & 5438 \\ 
+ & DHS & 2015 & \cmark & 2154 & 1777 & 1646 & 5577 \\ 
+ & PHIA & 2016 & \cmark & 2114 & 1817 & 1573 & 5504 \\ 
+Total &  &  &  & $9826$ & $8563$ & $7347$ & $25736$ \\ 
+\midrule 
+\midrule 
+Total &  &  &  & $106397$ & $95253$ & $82518$ & $284168$ \\ 
+\bottomrule
+\caption{All of the surveys that we used in our analysis and their sample sizes, disaggregated by respondent age.}
+\label{tab:surveys-used}
+\end{longtable}
+
+\begin{table}[h]
+\centering
+\begin{tabularx}{\textwidth}{lX}
+\toprule
+Survey & Exclusion reason \\ 
+ \midrule
+MOZ2003DHS & No GPS coordinates available to place survey clusters within districts. \\
+TZA2015DHS & Insufficient sexual behaviour questions. \\
+UGA2004AIS & Unable to download region boundaries. \\
+ZMB2002DHS & No GPS coordinates available to place survey clusters within districts. \\
+\bottomrule
+\end{tabularx}
+\label{tab:surveys-excluded}
+\caption{All of that surveys that were excluded from our analysis.}
+\end{table}
+
+## Spatial analysis levels
+
+\begin{table}[h]
+\centering
+\begin{tabularx}{\textwidth}{lXX}
+\toprule
+Country & Number of areas & Analysis level \\ 
+\midrule
+Botswana & 27 & 3 \\ 
+Cameroon & 58 & 2 \\ 
+Kenya & 47 & 2 \\ 
+Lesotho & 10 & 1 \\ 
+Mozambique & 161 & 3 \\ 
+Malawi & 33 & 5 \\ 
+Namibia & 38 & 2 \\ 
+Eswatini & 4 & 1 \\ 
+Tanzania & 195 & 4 \\ 
+Uganda & 136 & 3 \\ 
+South Africa & 52 & 2 \\ 
+Zambia & 116 & 2 \\ 
+Zimbabwe & 63 & 2 \\ 
+\bottomrule
+\end{tabularx}
+\label{tab:area-levels}
+\caption{The numer of areas and analysis levels for each country that were used in our analysis.}
+\end{table}
+
 # Fast approximate Bayesian inference supplement
