--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,15 +1,12 @@
-Thanks to Seth Flaxman and Jeff Eaton for supervision of this research;
-staff and students of the StatML CDT at Imperial and Oxford;
-members of the HIV Inference Group at Imperial;
-members of the Machine Learning and Global Health Network;
-the Bill & Melinda Gates Foundation and EPSRC via the StatML CDT for funding this PhD;
-Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab;
-Alex Stringer for hosting my visit to Waterloo;
-the Effective Altruism community;
-my friends and family.
+I would like to start by thanking my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship during the course of this research.
+I am grateful for the research environment offered by the HIV Inference Group, Modern Statistics and Statistical Machine Learning Centre for Doctoral Training, and Machine Learning and Global Health Network.
+The Effective Altruism community provided me a framework for deciding what to work on.
+Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab, and Alex Stringer for hosting my visit to the University of Waterloo.
+Thank you to my parents and grandparents.
+Finally, I am grateful for the Bill & Melinda Gates Foundation and EPSRC for funding this research.
 
 \begin{flushright}
 Adam Howes \\
 Imperial College London\\
-September 2023
+October 2023
 \end{flushright}
