--- a/references.bib
+++ b/references.bib
@@ -868,3 +868,227 @@ URL= {https://www.r-inla.org/faq},
   year={2014},
   publisher={Elsevier}
 }
+
+@article{cohen2011prevention,
+  title={Prevention of HIV-1 infection with early antiretroviral therapy},
+  author={Cohen, Myron S and Chen, Ying Q and McCauley, Marybeth and Gamble, Theresa and Hosseinipour, Mina C and Kumarasamy, Nagalingeswaran and Hakim, James G and Kumwenda, Johnstone and Grinsztejn, Beatriz and Pilotto, Jose HS and others},
+  journal={New England journal of medicine},
+  volume={365},
+  number={6},
+  pages={493--505},
+  year={2011},
+  publisher={Mass Medical Soc}
+}
+
+@article{auvert2005randomized,
+  title={{Randomized, controlled intervention trial of male circumcision for reduction of HIV infection risk: the ANRS 1265 Trial}},
+  author={Auvert, Bertran and Taljaard, Dirk and Lagarde, Emmanuel and Sobngwi-Tambekou, Joelle and Sitta, R{\'e}mi and Puren, Adrian},
+  journal={PLoS medicine},
+  volume={2},
+  number={11},
+  pages={e298},
+  year={2005},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{bailey2007male,
+  title={Male circumcision for HIV prevention in young men in Kisumu, Kenya: a randomised controlled trial},
+  author={Bailey, Robert C and Moses, Stephen and Parker, Corette B and Agot, Kawango and Maclean, Ian and Krieger, John N and Williams, Carolyn FM and Campbell, Richard T and Ndinya-Achola, Jeckoniah O},
+  journal={The Lancet},
+  volume={369},
+  number={9562},
+  pages={643--656},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{gray2007male,
+  title={{Male circumcision for HIV prevention in men in Rakai, Uganda: a randomised trial}},
+  author={Gray, Ronald H and Kigozi, Godfrey and Serwadda, David and Makumbi, Frederick and Watya, Stephen and Nalugoda, Fred and Kiwanuka, Noah and Moulton, Lawrence H and Chaudhary, Mohammad A and Chen, Michael Z and others},
+  journal={The Lancet},
+  volume={369},
+  number={9562},
+  pages={657--666},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@misc{phia,
+ title={{Population-based HIV impact assessment: guiding the global HIV response}},
+ author={{PHIA project}},
+ url={https://phia.icap.columbia.edu},
+ note = {Accessed 17/05/2022}
+}
+
+@misc{ais,
+ title={{AIDS Indicators Survey (AIS)}},
+ author={{DHS Program}},
+ url={https://dhsprogram.com/Methodology/Survey-Types/AIS.cfm},
+ note = {Accessed 17/05/2022}
+}
+
+@article{botswana2013botswana,
+  title={Botswana AIDS Impact Survey IV Statistical Report},
+  author={Botswana, Statistics},
+  journal={Government Printer, Gaborone, Republic of Botswana},
+  year={2013}
+}
+
+@article{dawid1984present,
+  title={Present position and potential developments: Some personal views statistical theory the prequential approach},
+  author={Dawid, A Philip},
+  journal={Journal of the Royal Statistical Society: Series A (General)},
+  volume={147},
+  number={2},
+  pages={278--290},
+  year={1984},
+  publisher={Wiley Online Library}
+}
+
+@misc{bosse2022scoringutils,
+  doi = {10.48550/ARXIV.2205.07090},
+
+  url = {https://arxiv.org/abs/2205.07090},
+
+  author = {Bosse, Nikos I. and Gruson, Hugo and Cori, Anne and van Leeuwen, Edwin and Funk, Sebastian and Abbott, Sam},
+
+  keywords = {Methodology (stat.ME), Applications (stat.AP), Computation (stat.CO), FOS: Computer and information sciences, FOS: Computer and information sciences},
+
+  title = {Evaluating Forecasts with scoringutils in R},
+
+  publisher = {arXiv},
+
+  year = {2022},
+
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@article{cleland2004monitoring,
+  title={Monitoring sexual behaviour in general populations: a synthesis of lessons of the past decade},
+  author={Cleland, John and Boerma, J Ties and Cara{\"e}l, Michel and Weir, Sharon S},
+  journal={Sexually Transmitted Infections},
+  volume={80},
+  number={suppl 2},
+  pages={ii1--ii7},
+  year={2004},
+  publisher={The Medical Society for the Study of Venereal Disease}
+}
+
+@article{nnko2004secretive,
+  title={{Secretive females or swaggering males?: An assessment of the quality of sexual partnership reporting in rural Tanzania}},
+  author={Nnko, Soori and Boerma, J Ties and Urassa, Mark and Mwaluko, Gabriel and Zaba, Basia},
+  journal={{Social Science \& Medicine}},
+  volume={59},
+  number={2},
+  pages={299--310},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{zaba2004age,
+  title={Age at first sex: understanding recent trends in African demographic surveys},
+  author={Zaba, Basia and Pisani, Elizabeth and Slaymaker, Emma and Boerma, J Ties},
+  journal={Sexually transmitted infections},
+  volume={80},
+  number={suppl 2},
+  pages={ii28--ii35},
+  year={2004},
+  publisher={The Medical Society for the Study of Venereal Disease}
+}
+
+@article{wringe2009comparative,
+  title={Comparative assessment of the quality of age-at-event reporting in three HIV cohort studies in sub-Saharan Africa},
+  author={Wringe, A and Cremin, I and Todd, J and McGrath, N and Kasamba, I and Herbst, K and Mushore, P and {\.Z}aba, B and Slaymaker, E},
+  journal={Sexually transmitted infections},
+  volume={85},
+  number={Suppl 1},
+  pages={i56--i63},
+  year={2009},
+  publisher={The Medical Society for the Study of Venereal Disease}
+}
+
+@article{glynn2011assessing,
+  title={{Assessing the validity of sexual behaviour reports in a whole population survey in rural Malawi}},
+  author={Glynn, Judith R and Kayuni, Ndoliwe and Banda, Emmanuel and Parrott, Fiona and Floyd, Sian and Francis-Chizororo, Monica and Nkhata, Misheck and Tanton, Clare and Hemmings, Joanne and Molesworth, Anna and others},
+  journal={{PLoS One}},
+  volume={6},
+  number={7},
+  pages={e22840},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{helleringer2011reliability,
+  title={The reliability of sexual partnership histories: implications for the measurement of partnership concurrency during surveys},
+  author={Helleringer, St{\'e}phane and Kohler, Hans-Peter and Kalilani-Phiri, Linda and Mkandawire, James and Armbruster, Benjamin},
+  journal={AIDS (London, England)},
+  volume={25},
+  number={4},
+  pages={503},
+  year={2011},
+  publisher={NIH Public Access}
+}
+
+@misc{ihme1,
+ author = {{Global Burden of Disease Collaborative Network}},
+ city = {Seattle},
+ country = {USA},
+ publisher = {{Institute for Health Metrics and Evaluation (IHME)}},
+ title = {Global Burden of Disease Study 2019 (GBD 2019) Results. },
+ url = {https://vizhub.healthdata.org/gbd-results/},
+ year = {2019}
+}
+
+@article{risher2021age,
+  title={Age patterns of HIV incidence in eastern and southern Africa: a modelling analysis of observational population-based cohort studies},
+  author={Risher, Kathryn A and Cori, Anne and Reniers, Georges and Marston, Milly and Calvert, Clara and Crampin, Amelia and Dadirai, Tawanda and Dube, Albert and Gregson, Simon and Herbst, Kobus and others},
+  journal={The Lancet HIV},
+  volume={8},
+  number={7},
+  pages={e429--e439},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{monod2023growing,
+  title={Growing gender disparity in HIV infection in Africa: sources and policy implications},
+  author={Monod, M{\'e}lodie and Brizzi, Andrea and Galiwango, Ronald M and Ssekubugu, Robert and Chen, Yu and Xi, Xiaoyue and Kankaka, Edward Nelson and Ssempijja, Victor and D{\"o}rner, Lucie Abeler and Akullian, Adam and others},
+  journal={medRxiv},
+  pages={2023--03},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{khoury2016precision,
+  title={Precision public health for the era of precision medicine},
+  author={Khoury, Muin J and Iademarco, Michael F and Riley, William T},
+  journal={American journal of preventive medicine},
+  volume={50},
+  number={3},
+  pages={398--401},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{fisher1936design,
+  title={Design of experiments},
+  author={Fisher, Ronald Aylmer},
+  journal={British Medical Journal},
+  volume={1},
+  number={3923},
+  pages={554},
+  year={1936},
+  publisher={BMJ Publishing Group}
+}
+
+@article{tobler1970computer,
+  title={A computer movie simulating urban growth in the Detroit region},
+  author={Tobler, Waldo R},
+  journal={Economic geography},
+  volume={46},
+  number={sup1},
+  pages={234--240},
+  year={1970},
+  publisher={Taylor \& Francis}
+}
+
