--- a/templates/brief_template.tex
+++ b/templates/brief_template.tex
@@ -160,8 +160,12 @@ $endfor$
 %%%%% YOUR OWN PERSONAL MACROS
 % This is a good place to dump your own LaTeX macros as they come up.
 
+\usepackage{tabularx}
+\usepackage{bm}
+
 \newcommand{\Sc}{\mathcal{S}}
 \newcommand{\R}{\mathcal{R}}
+\newcommand{\bR}{\mathbf{R}}
 \newcommand{\N}{\mathcal{N}}
 \newcommand{\X}{\mathcal{X}} 
 \newcommand{\m}{\mathbf{m}}
@@ -172,11 +176,20 @@ $endfor$
 \newcommand{\y}{\mathbf{y}}
 \newcommand{\z}{\mathbf{z}}
 \newcommand{\bb}{\mathbf{b}}
+\newcommand{\Hb}{\mathbf{H}}
 \newcommand{\bphi}{\bm{\phi}}
 \newcommand{\brho}{\bm{\rho}}
 \newcommand{\btheta}{\bm{\theta}}
+\newcommand{\bmeta}{\bm{\eta}}
+\newcommand{\bvartheta}{\bm{\vartheta}}
+\newcommand{\bmu}{\bm{\mu}}
 
-\RequirePackage{bm}
+\newcommand{\cmark}{\ding{51}}
+\newcommand{\xmark}{\ding{55}}
+
+\usepackage{amsmath}
+\DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\argmax}{arg\,max}
 
 % To make text superscripts shortcuts
 	\renewcommand{\th}{\textsuperscript{th}} % ex: I won 4\th place
