--- a/templates/template.tex
+++ b/templates/template.tex
@@ -196,6 +196,11 @@ $endif$
 %%%%% YOUR OWN PERSONAL MACROS
 % This is a good place to dump your own LaTeX macros as they come up.
 
+\usepackage{pifont}
+\usepackage{amsmath}
+\usepackage{tabularx}
+\usepackage{bm}
+
 \newcommand{\Sc}{\mathcal{S}}
 \newcommand{\R}{\mathcal{R}}
 \newcommand{\bR}{\mathbf{R}}
@@ -220,11 +225,8 @@ $endif$
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
 
-\usepackage{amsmath}
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator*{\argmax}{arg\,max}
-
-\RequirePackage{bm}
 
 % To make text superscripts shortcuts
 	\renewcommand{\th}{\textsuperscript{th}} % ex: I won 4\th place
